--- a/webapp/index.html
+++ b/webapp/index.html
@@ -105,9 +105,9 @@
             <div class="col-4">
               <label class="form-label">HP</label>
               <div class="input-group input-group-sm stepper">
-                <button class="btn step-btn" type="button" data-step="-1" data-target="f_hp">-</button>
+                <button class="btn step-btn" type="button" data-target="f_hp" data-step="-1">−</button>
                 <input id="f_hp" type="number" class="form-control text-center" />
-                <button class="btn step-btn" type="button" data-step="1" data-target="f_hp">+</button>
+                <button class="btn step-btn" type="button" data-target="f_hp" data-step="1">+</button>
                 <span class="input-group-text">/</span>
                 <input id="f_hp_max" type="number" class="form-control" />
               </div>
@@ -117,9 +117,9 @@
             <div class="col-4">
               <label class="form-label">Мана</label>
               <div class="input-group input-group-sm stepper">
-                <button class="btn step-btn" type="button" data-step="-1" data-target="f_mana">-</button>
+                <button class="btn step-btn" type="button" data-target="f_hp" data-step="-1">−</button>
                 <input id="f_mana" type="number" class="form-control text-center" />
-                <button class="btn step-btn" type="button" data-step="1" data-target="f_mana">+</button>
+                <button class="btn step-btn" type="button" data-target="f_hp" data-step="1">+</button>
                 <span class="input-group-text">/</span>
                 <input id="f_mana_max" type="number" class="form-control" />
               </div>
@@ -129,9 +129,9 @@
             <div class="col-4">
               <label class="form-label">Энергия</label>
               <div class="input-group input-group-sm stepper">
-                <button class="btn step-btn" type="button" data-step="-1" data-target="f_energy">-</button>
+                <button class="btn step-btn" type="button" data-target="f_hp" data-step="-1">−</button>
                 <input id="f_energy" type="number" class="form-control text-center" />
-                <button class="btn step-btn" type="button" data-step="1" data-target="f_energy">+</button>
+                <button class="btn step-btn" type="button" data-target="f_hp" data-step="1">+</button>
                 <span class="input-group-text">/</span>
                 <input id="f_energy_max" type="number" class="form-control" />
               </div>
