--- a/webapp/index.html
+++ b/webapp/index.html
@@ -129,13 +129,14 @@
 
                 <input id="f_mana" type="number" class="form-control form-control-sm num" inputmode="numeric" />
 
-                <div class="hint">+lvl <input id="f_mana_per_level" type="number" class="mini" inputmode="numeric" /></div>
+                <button class="btn btn-outline-light step-btn" type="button" data-target="f_mana" data-step="+1">+</button>
 
                 <span class="step-sep">/</span>
 
                 <input id="f_mana_max" type="number" class="form-control form-control-sm num" inputmode="numeric" />
+              </div>
 
-                <button class="btn btn-outline-light step-btn" type="button" data-target="f_mana" data-step="+1">+</button>
+                <div class="hint">+lvl <input id="f_mana_per_level" type="number" class="mini" inputmode="numeric" /></div>
               </div>
             </div>
 
