--- a/webapp/index.html
+++ b/webapp/index.html
@@ -44,7 +44,7 @@
       <i class="bi bi-stars"></i><span>Заклинание</span>
     </button>
     <button class="fab-item" type="button" data-action="add-ability">
-      <i class="bi bi-lightning-charge"></i><span>Умение</span>
+      <i class="bi bi-lightning-charge"></i><span>Пасивки</span>
     </button>
     <button class="fab-item" type="button" data-action="add-item">
       <i class="bi bi-backpack"></i><span>Предмет</span>
@@ -60,7 +60,8 @@
       <li class="nav-item"><button class="nav-link" data-tab="stats"><i class="bi bi-bar-chart"></i><span>Статы</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="inv"><i class="bi bi-backpack"></i><span>Инв.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="spells"><i class="bi bi-stars"></i><span>Закл.</span></button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="abilities"><i class="bi bi-lightning-charge"></i><span>Ум.</span></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="abilities"><i class="bi bi-lightning-fill"><span>Способ.</span></i></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="passive-abilities"><i class="bi bi-lightning-charge"></i><span>Пассив.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="states"><i class="bi bi-activity"></i><span>Сост.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="equip"><i class="bi bi-shield"></i><span>Экип.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="custom"><i class="bi bi-sliders"></i><span>Поля</span></button></li>
@@ -221,15 +222,40 @@
       </div>
     </section>
 
+    <!-- PASSIVE ABILITIES -->
+    <section class="tab d-none" id="tab-passive-abilities">
+      <div class="card card-soft">
+        <div class="card-body">
+
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="section-title mb-0">Пассивные умения</div>
+
+            <button id="btnAddPassiveAbility" class="btn btn-sm btn-light">
+              <i class="bi bi-plus-lg me-1"></i>Пассивное умение
+            </button>
+          </div>
+
+          <div id="passiveAbilitiesList" class="list mt-2"></div>
+
+        </div>
+      </div>
+    </section>
+
     <!-- ABILITIES -->
     <section class="tab d-none" id="tab-abilities">
       <div class="card card-soft">
         <div class="card-body">
+
           <div class="d-flex justify-content-between align-items-center">
-            <div class="section-title mb-0">Умения</div>
-            <button id="btnAddAbility" class="btn btn-sm btn-light"><i class="bi bi-plus-lg me-1"></i>Умение</button>
+            <div class="section-title mb-0">Способности</div>
+
+            <button id="btnAddAbility" class="btn btn-sm btn-light">
+              <i class="bi bi-plus-lg me-1"></i>Способность
+            </button>
           </div>
+
           <div id="abilitiesList" class="list mt-2"></div>
+
         </div>
       </div>
     </section>
