--- a/webapp/index.html
+++ b/webapp/index.html
@@ -43,8 +43,11 @@
     <button class="fab-item" type="button" data-action="add-spell">
       <i class="bi bi-stars"></i><span>Заклинание</span>
     </button>
+    <button class="fab-item" type="button" data-action="add-passive">
+      <i class="bi bi-shield-check"></i><span>Пассивное умение</span>
+    </button>
     <button class="fab-item" type="button" data-action="add-ability">
-      <i class="bi bi-lightning-charge"></i><span>Пасивки</span>
+      <i class="bi bi-lightning-charge"></i><span>Способность</span>
     </button>
     <button class="fab-item" type="button" data-action="add-item">
       <i class="bi bi-backpack"></i><span>Предмет</span>
