--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,9 +7,9 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles.css?v=105" />
+  <link rel="stylesheet" href="styles.css?v=106" />
 
-  <script src="https://telegram.org/js/telegram-web-app.js?v=105"></script>
+  <script src="https://telegram.org/js/telegram-web-app.js?v=106"></script>
 </head>
 <body>
 <div class="wrap">
@@ -63,7 +63,7 @@
       <li class="nav-item"><button class="nav-link" data-tab="stats"><i class="bi bi-bar-chart"></i><span>Статы</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="inv"><i class="bi bi-backpack"></i><span>Инв.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="spells"><i class="bi bi-stars"></i><span>Закл.</span></button></li>
-      <li class="nav-item"><button class="nav-link" data-tab="abilities"><i class="bi bi-lightning-fill"><span>Способ.</span></i></button></li>
+      <li class="nav-item"><button class="nav-link" data-tab="abilities"><i class="bi bi-lightning-fill"></i><span>Способ.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="passive-abilities"><i class="bi bi-lightning-charge"></i><span>Пассив.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="states"><i class="bi bi-activity"></i><span>Сост.</span></button></li>
       <li class="nav-item"><button class="nav-link" data-tab="equip"><i class="bi bi-shield"></i><span>Экип.</span></button></li>
