--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,9 +7,9 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles.css?v=107" />
+  <link rel="stylesheet" href="styles.css?v=106" />
 
-  <script src="https://telegram.org/js/telegram-web-app.js?v=107"></script>
+  <script src="https://telegram.org/js/telegram-web-app.js?v=106"></script>
 </head>
 <body>
 <div class="wrap">
@@ -89,7 +89,11 @@
             </div>
             <div class="col-6">
               <label class="form-label">Пол</label>
-              <input id="f_gender" class="form-control" placeholder="" />
+              <select id="f_gender" class="form-select">
+                <option value="">Не указывать</option>
+                <option value="female">Женщина</option>
+                <option value="male">Мужчина</option>
+              </select>
             </div>
             <div class="col-3">
               <label class="form-label">Уровень</label>
@@ -98,6 +102,19 @@
             <div class="col-3">
               <label class="form-label">XP</label>
               <input id="f_xp" type="number" class="form-control" min="0" />
+            </div>
+
+            <div class="col-4">
+              <label class="form-label">Золото</label>
+              <input id="f_gold" type="number" class="form-control" min="0" />
+            </div>
+            <div class="col-4">
+              <label class="form-label">Серебро</label>
+              <input id="f_silver" type="number" class="form-control" min="0" />
+            </div>
+            <div class="col-4">
+              <label class="form-label">Медь</label>
+              <input id="f_copper" type="number" class="form-control" min="0" />
             </div>
           </div>
 
