--- a/webapp/index.html
+++ b/webapp/index.html
@@ -313,9 +313,10 @@
       <div class="card card-soft">
         <div class="card-body">
           <div class="section-title">Экипировка</div>
-          <div class="grid-2" id="equipGrid"></div>
-          <div class="d-grid mt-3">
-            <button id="btnSaveEquip" class="btn btn-primary">Сохранить экипировку</button>
+          <div id="equipGrid" class="grid-2"></div>
+          <button id="btnSaveEquip" class="btn btn-primary w-100 mt-3">
+            Сохранить экипировку
+          </button>
           </div>
         </div>
       </div>
