--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,9 +7,9 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="styles.css?v=106" />
+  <link rel="stylesheet" href="styles.css?v=107" />
 
-  <script src="https://telegram.org/js/telegram-web-app.js?v=106"></script>
+  <script src="https://telegram.org/js/telegram-web-app.js?v=107"></script>
 </head>
 <body>
 <div class="wrap">
@@ -313,6 +313,7 @@
       <div class="card card-soft">
         <div class="card-body">
           <div class="section-title">Экипировка</div>
+          <div id="equipBonus" class="muted mb-2"></div>
           <div id="equipGrid" class="grid-2"></div>
           <button id="btnSaveEquip" class="btn btn-primary w-100 mt-3">
             Сохранить экипировку
@@ -321,6 +322,7 @@
         </div>
       </div>
     </section>
+
 
     <!-- CUSTOM FIELDS -->
     <section class="tab d-none" id="tab-custom">
