--- a/webapp/index.html
+++ b/webapp/index.html
@@ -105,25 +105,26 @@
               <div class="money-wrap">
                 <div class="section-title">Кошелёк</div>
 
-                <div class="coins-line">
-                  <div class="coin-item">
-                    <span class="coin-icon gold">●</span>
-                    <input id="f_gold" type="number" class="coin-input" inputmode="numeric" />
+                <div class="wallet-row">
+                  <div class="wallet-pair">
+                    <span class="coin-ico coin-gold" title="Золото"></span>
+                    <input id="f_gold" type="number" class="form-control wallet-input" min="0" inputmode="numeric" />
                   </div>
 
-                  <div class="coin-item">
-                    <span class="coin-icon silver">●</span>
-                    <input id="f_silver" type="number" class="coin-input" inputmode="numeric" />
+                  <div class="wallet-pair">
+                    <span class="coin-ico coin-silver" title="Серебро"></span>
+                    <input id="f_silver" type="number" class="form-control wallet-input" min="0" inputmode="numeric" />
                   </div>
 
-                  <div class="coin-item">
-                    <span class="coin-icon copper">●</span>
-                    <input id="f_copper" type="number" class="coin-input" inputmode="numeric" />
+                  <div class="wallet-pair">
+                    <span class="coin-ico coin-copper" title="Медь"></span>
+                    <input id="f_copper" type="number" class="form-control wallet-input" min="0" inputmode="numeric" />
                   </div>
                 </div>
 
-                <div class="hint mt-2" id="moneyPreview"></div>
-                <div class="hint">Автоконвертация: 10 🟤 = 1 ⚪, 10 ⚪ = 1 🟡</div>
+                <div id="moneyPreview" class="money-preview muted">—</div>
+                <div class="hint">Конвертация показывается только в превью: 10 🟤 = 1 ⚪, 10 ⚪ = 1 🟡</div>
+
               </div>
             </div>
           </div>
