--- a/webapp/index.html
+++ b/webapp/index.html
@@ -24,6 +24,7 @@
         <button id="btnImport" class="btn btn-sm btn-outline-light">Импорт</button>
         <button id="btnSync" class="btn btn-sm btn-outline-light">Синхр.</button>
         <button id="btnTemplates" class="btn btn-sm btn-light">Шаблоны</button>
+        <button id="btnBuilder" class="btn btn-outline-light btn-sm">Конструктор</button>
       </div>
     </div>
 
@@ -423,5 +424,93 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="app.js"></script>
+
+<!-- ===== Конструктор вкладок ===== -->
+<div id="builderModal" class="modalx d-none">
+  <div class="modalx-backdrop"></div>
+  <div class="modalx-card">
+    <div class="modalx-head">
+      <div class="modalx-title">Конструктор вкладок</div>
+      <button id="builderClose" class="btn btn-outline-light btn-sm">✕</button>
+    </div>
+
+    <div class="modalx-body">
+      <div class="row g-2">
+        <div class="col-12">
+          <label class="form-label">Название шаблона</label>
+          <input id="builderTplName" class="form-control" placeholder="Напр. Мой лист v2" />
+          <div class="hint mt-1">Шаблон будет создан и сразу применён к текущему персонажу.</div>
+        </div>
+      </div>
+
+      <hr class="my-3"/>
+
+      <div class="d-flex gap-2 mb-2">
+        <button id="builderAddTab" class="btn btn-primary btn-sm">+ Вкладка</button>
+        <button id="builderAddSection" class="btn btn-outline-light btn-sm">+ Раздел</button>
+        <button id="builderAddField" class="btn btn-outline-light btn-sm">+ Поле</button>
+      </div>
+
+      <div class="hint mb-2">Сначала выбери вкладку, потом раздел, потом добавляй поля.</div>
+
+      <div class="builder-grid">
+        <div class="builder-col">
+          <div class="builder-col-title">Вкладки</div>
+          <div id="builderTabs" class="builder-list"></div>
+        </div>
+
+        <div class="builder-col">
+          <div class="builder-col-title">Разделы</div>
+          <div id="builderSections" class="builder-list"></div>
+        </div>
+
+        <div class="builder-col">
+          <div class="builder-col-title">Поля</div>
+          <div id="builderFields" class="builder-list"></div>
+        </div>
+      </div>
+
+      <hr class="my-3"/>
+
+      <div class="builder-field-editor">
+        <div class="row g-2">
+          <div class="col-6">
+            <label class="form-label">Label</label>
+            <input id="builderFieldLabel" class="form-control" placeholder="Напр. Биография" />
+          </div>
+          <div class="col-6">
+            <label class="form-label">Key</label>
+            <input id="builderFieldKey" class="form-control" placeholder="bio" />
+          </div>
+          <div class="col-6">
+            <label class="form-label">Тип</label>
+            <select id="builderFieldType" class="form-select">
+              <option value="text">text</option>
+              <option value="textarea">textarea</option>
+              <option value="number">number</option>
+              <option value="checkbox">checkbox</option>
+            </select>
+          </div>
+          <div class="col-6">
+            <label class="form-label">Default</label>
+            <input id="builderFieldDefault" class="form-control" placeholder="(опционально)" />
+          </div>
+        </div>
+        <div class="hint mt-2">После выбора поля — меняй параметры и жми “Применить к полю”.</div>
+        <button id="builderApplyField" class="btn btn-outline-light btn-sm mt-2">Применить к полю</button>
+      </div>
+
+      <details class="mt-3">
+        <summary class="muted">Показать JSON конфигурации</summary>
+        <pre id="builderJson" class="mt-2 codebox"></pre>
+      </details>
+    </div>
+
+    <div class="modalx-foot">
+      <button id="builderSave" class="btn btn-primary w-100">Создать шаблон и применить</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
