--- a/webapp/index.html
+++ b/webapp/index.html
@@ -511,6 +511,9 @@
     </div>
   </div>
 </div>
-
+<!-- Donat button -->
+<a id="btnDonate" class="donate-btn" href="#" role="button">
+  ❤️ Пожертвовать
+</a>
 </body>
 </html>
