--- a/webapp/index.html
+++ b/webapp/index.html
@@ -512,8 +512,11 @@
   </div>
 </div>
 <!-- Donat button -->
-<a id="btnDonate" class="donate-btn" href="#" role="button">
-  ❤️ Пожертвовать
+<a id="btnDonate" class="donate-btn"
+   href="https://www.donationalerts.com/r/d4rkl1"
+   target="_blank" rel="noopener noreferrer"
+   role="button">
+  ❤️ Поддержать автора
 </a>
 </body>
 </html>
