--- a/webapp/index.html
+++ b/webapp/index.html
@@ -115,7 +115,16 @@
               </div>
               <div class="hint">XP переносится на следующий уровень автоматически.</div>
             </div>
-
+            <div class="col-6">
+              <label class="form-label">XP на уровень</label>
+              <input
+                id="f_xp_per_level"
+                type="number"
+                class="form-control"
+                min="1"
+                placeholder="например 100"
+              />
+            </div>
             <div class="col-12">
               <div class="money-wrap">
                 <div class="section-title">Кошелёк</div>
